# Logginator-Project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  os_test-unit-tests.code-workspace
experimental/: CMakeLists.txt  experimental.cpp
tests/: CMakeLists.txt
tests/tst_format_line/: CMakeLists.txt  tst_format_line.cpp
tests/tst_logginator_comprehensive/: CMakeLists.txt  tst_comprehensive.cpp
tests/tst_logginator_formator/: CMakeLists.txt  tst_formator.cpp
tests/tst_printer/: CMakeLists.txt  tst_printer.cpp
tests/ut_catch/inc/: catch.hpp
